--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>SignupController</servlet-name>
         <servlet-class>SignupModule.SignupController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SearchPartnersController</servlet-name>
+        <servlet-class>PartnerModule.SearchPartners.SearchPartnersController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>SignupController</servlet-name>
         <url-pattern>/signup</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SearchPartnersController</servlet-name>
+        <url-pattern>/searchPartners</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
