--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,10 @@
         <servlet-name>reqPartnerController</servlet-name>
         <servlet-class>PartnerModule.RequestPartners.reqPartnerController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>viewRequestController</servlet-name>
+        <servlet-class>PartnerModule.RequestPartners.viewRequestsController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -39,6 +43,10 @@
     <servlet-mapping>
         <servlet-name>reqPartnerController</servlet-name>
         <url-pattern>/reqPartner</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>viewRequestController</servlet-name>
+        <url-pattern>/viewRequests</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
