--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,10 @@
         <servlet-name>viewRequestController</servlet-name>
         <servlet-class>PartnerModule.RequestPartners.viewRequestsController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>viewPartnersController</servlet-name>
+        <servlet-class>PartnerModule.ViewPartners.viewPartnersController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -47,6 +51,10 @@
     <servlet-mapping>
         <servlet-name>viewRequestController</servlet-name>
         <url-pattern>/viewRequests</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>viewPartnersController</servlet-name>
+        <url-pattern>/viewPartners</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
