--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,10 @@
         <servlet-name>viewPartnersController</servlet-name>
         <servlet-class>PartnerModule.ViewPartners.viewPartnersController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>respondReqController</servlet-name>
+        <servlet-class>PartnerModule.RequestPartners.respondReqController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -55,6 +59,10 @@
     <servlet-mapping>
         <servlet-name>viewPartnersController</servlet-name>
         <url-pattern>/viewPartners</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>respondReqController</servlet-name>
+        <url-pattern>/respondReq</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
