--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,14 @@
         <servlet-name>respondReqController</servlet-name>
         <servlet-class>PartnerModule.RequestPartners.respondReqController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>actPartnerController</servlet-name>
+        <servlet-class>ActivityModule.PlanActivity.actPartnerController</servlet-class>
+    </servlet>
+     <servlet>
+        <servlet-name>sendPlanController</servlet-name>
+        <servlet-class>ActivityModule.PlanActivity.sendPlanController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -63,6 +71,14 @@
     <servlet-mapping>
         <servlet-name>respondReqController</servlet-name>
         <url-pattern>/respondReq</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>actPartnerController</servlet-name>
+        <url-pattern>/actPartner</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>sendPlanController</servlet-name>
+        <url-pattern>/sendPlan</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
