--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,10 @@
         <servlet-name>sendPlanController</servlet-name>
         <servlet-class>ActivityModule.PlanActivity.sendPlanController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>viewPlanningController</servlet-name>
+        <servlet-class>ActivityModule.ViewPlanning.viewPlanningController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -79,6 +83,10 @@
     <servlet-mapping>
         <servlet-name>sendPlanController</servlet-name>
         <url-pattern>/sendPlan</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>viewPlanningController</servlet-name>
+        <url-pattern>/viewPlan</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
