--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,6 +44,14 @@
         <servlet-name>viewPlanningController</servlet-name>
         <servlet-class>ActivityModule.ViewPlanning.viewPlanningController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>respondPlanController</servlet-name>
+        <servlet-class>ActivityModule.RespondPlan.respondPlanController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>viewConfirmedController</servlet-name>
+        <servlet-class>ActivityModule.ViewConfirmed.viewConfirmedController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -87,6 +95,14 @@
     <servlet-mapping>
         <servlet-name>viewPlanningController</servlet-name>
         <url-pattern>/viewPlan</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>respondPlanController</servlet-name>
+        <url-pattern>/respondPlan</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>viewConfirmedController</servlet-name>
+        <url-pattern>/viewConfirmed</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
